k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gse-terminal
  labels:
    app: gse-terminal
